APPS-5815 reduceToIntegers at the end